.jjconflict-side-1/apps/qbittorrent/base/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: qbittorrent
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: lidarr
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prowlarr
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: radarr
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: sonarr
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: whisparr
      ports:
        - port: https
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: qbittorrent-cleanup
      ports:
        - port: https
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: qbittorrent
      app.kubernetes.io/name: qbittorrent
  policyTypes:
    - Ingress
